# chaosiq-agent

./: .dockerignore  .editorconfig  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  docker.yaml
chaosiqagent/: __init__.py  __main__.py  agent.py  cli.py  client.py  ctk.py  heartbeat.py  job.py  json.py  log.py  settings.py  types.py  utils.py
chaosiqagent/backend/: __init__.py  base.py  k8s.py  shell.py
chaosiqagent/templates/ctk/: settings.yaml
chaosiqagent/templates/k8s/: experiment.yaml  namespace.yaml  secret.yaml
config/: .env.sample
deploy/k8s/kustomize/base/: kustomization.yaml
deploy/k8s/kustomize/base/common/: deployment.yaml  kustomization.yaml  ns.yaml  serviceaccount.yaml
deploy/k8s/kustomize/base/sec/: kustomization.yaml  net.yaml  pod.yaml  role.yaml
deploy/k8s/kustomize/overlays/generic/: kustomization.yaml
deploy/k8s/kustomize/overlays/generic/data/: .env.sample
tests/: conftest.py  test_agent.py  test_backend_base.py  test_backend_k8s.py  test_backend_shell.py  test_cli.py  test_ctk.py  test_heartbeat.py  test_jobs.py  test_json.py  test_log.py  test_settings.py  test_utils.py
tests/fixtures/: .env.test  backend.py  httpx_client.py  job.py
