[bdist_wheel]
universal = 1

[metadata]
name = chaosiq-agent
url = https://chaosiq.io
project_urls =
    CI: GitHub = https://github.com/chaosiq/chaosiq-agent/actions
    Docs: RTD = https://docs.chaosiq.io
    GitHub: issues = https://github.com/chaosiq/chaosiq-agent/issues
    GitHub: repo = https://github.com/chaosiq/chaosiq-agent
description = Agent of the ChaosIQ platform
long_description = file: README.md
long_description_content_type = text/markdown
author = ChaosIQ
author_email = contact@chaosiq.io
license_file = LICENSE
zip_safe = False
platforms = any
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0

[options.entry_points]
console_scripts =
    chaosiq-agent = chaosiqagent.cli:cli

[options.package_data]
chaosiqagent = templates/**/*.yaml

[pylama]
format = pylint
linters= pycodestyle,pyflakes,mccabe,mypy

[pylama:pycodestyle]
max_line_length = 80

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaosiqagent
    --cov-report term-missing:skip-covered
    --cov-report xml
    --cov-fail-under 95
    -p no:warnings

[tool:isort]
force_single_line = False
force_grid_wrap = False
include_trailing_comma = False
combine_as_imports = True
indent = 4
skip = tests
multi_line_output = 3
known_first_party = chaosiqagent

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_any_unimported = True
disallow_untyped_defs = True
files = chaosiqagent/**.py
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-chaosiqagent.*]
disallow_any_unimported = False

[mypy-authlib.*]
ignore_missing_imports = True

[mypy-better_exceptions.*]
ignore_missing_imports = True

[mypy-pythonjsonlogger.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-uvloop.*]
ignore_missing_imports = True

[mypy-aiojobs.*]
ignore_missing_imports = True

[mypy-kubernetes_asyncio.*]
ignore_missing_imports = True
